# Tracer

./: Cargo.toml  run.bat  run.sh
.github/workflows/: ci.yml
apps/schematic_editor/: Cargo.toml
apps/schematic_editor/src/: main.rs
apps/schematic_editor/src/canvas/: mod.rs  state.rs  tools.rs
apps/schematic_editor/src/macos_app/: browser.rs  canvas_view.rs  mod.rs  view.rs
apps/schematic_editor/src/ui/: drag.rs  mod.rs  theme.rs  widgets.rs
apps/tracer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/tracer/src/: App.tsx  index.css
apps/tracer/src-tauri/: Cargo.toml  tauri.conf.json
apps/tracer/src-tauri/capabilities/: default.json
apps/tracer/src-tauri/src/: lib.rs  main.rs  state.rs
apps/tracer/src-tauri/src/commands/: document.rs  library.rs  mod.rs
apps/tracer/src/components/: Canvas.tsx  LibraryBrowser.tsx  StatusBar.tsx  ToolRail.tsx
apps/tracer/src/types/: index.ts
crates/app_shell/: Cargo.toml
crates/app_shell/src/: lib.rs
crates/eda_core/: Cargo.toml
crates/eda_core/src/: app.rs  clipboard.rs  commands.rs  document.rs  geometry.rs  id.rs  lib.rs  selection.rs
crates/kicad_fmt/: Cargo.toml
crates/kicad_fmt/src/: lib.rs  symbol_parser.rs
crates/library_index/: Cargo.toml
crates/library_index/src/: lib.rs
crates/render_scene/: Cargo.toml
crates/render_scene/src/: lib.rs
fixtures/kicad/project/: basic.kicad_pro
fixtures/kicad/schematic/: basic.kicad_sch
