[package]
name = "schematic_editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
app_shell.workspace = true
eda_core.workspace = true
kicad_fmt.workspace = true
library_index.workspace = true
render_scene.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "macos-blade"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "wayland", "x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { version = "0.2.2" }
