[package]
name = "tracer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "tracer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

eda_core     = { workspace = true }
kicad_fmt    = { workspace = true }
library_index = { workspace = true }

[lints]
workspace = true
